logs/automodel.log
Listing '.'...
Listing './bin'...
Compiling './bin/automodel.py'...
Compiling './bin/rpyc_classic.py'...
Compiling './bin/rpyc_registry.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MiniServer'...
Compiling './lib/python3.5/site-packages/MiniServer/file.py'...
***   File "./lib/python3.5/site-packages/MiniServer/file.py", line 6
    print last_line
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/MiniServer/modelagem.py'...
***   File "./lib/python3.5/site-packages/MiniServer/modelagem.py", line 158
    print self.seq.structures_names()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/MiniServer/sequence.py'...
***   File "./lib/python3.5/site-packages/MiniServer/sequence.py", line 41
    print "Erro ao abrir o arquivo"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/MiniServer/server.py'...
***   File "./lib/python3.5/site-packages/MiniServer/server.py", line 21
    print self.workdir
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/automodel-0.5.9.egg-info'...
Listing './lib/python3.5/site-packages/automodelexception'...
Listing './lib/python3.5/site-packages/manual'...
Listing './lib/python3.5/site-packages/model'...
Compiling './lib/python3.5/site-packages/model/AutoModelMode.py'...
***   File "./lib/python3.5/site-packages/model/AutoModelMode.py", line 24
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/modellingfile'...
Compiling './lib/python3.5/site-packages/modellingfile/file.py'...
***   File "./lib/python3.5/site-packages/modellingfile/file.py", line 8
    print last_line
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/modellingfile/residues.py'...
***   File "./lib/python3.5/site-packages/modellingfile/residues.py", line 47
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/modellingstep'...
Compiling './lib/python3.5/site-packages/modellingstep/AlignStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/AlignStep.py", line 30
    print "fim deste step"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/modellingstep/EvaluateProcheckStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/EvaluateProcheckStep.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modellingstep/EvaluateStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/EvaluateStep.py", line 24
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modellingstep/FindTemplatesStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/FindTemplatesStep.py", line 68
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modellingstep/LoopModelStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/LoopModelStep.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modellingstep/ModelStep.py'...
***   File "./lib/python3.5/site-packages/modellingstep/ModelStep.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/modellingstep/PrepareBeforeStartModelling.py'...
***   File "./lib/python3.5/site-packages/modellingstep/PrepareBeforeStartModelling.py", line 8
    print self.myworkdir
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/network'...
Compiling './lib/python3.5/site-packages/network/Clientold.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Clientold.py, line 17)
Listing './lib/python3.5/site-packages/options'...
Listing './lib/python3.5/site-packages/pdb'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumbum'...
Listing './lib/python3.5/site-packages/plumbum/cli'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/colorlib'...
Listing './lib/python3.5/site-packages/plumbum/commands'...
Listing './lib/python3.5/site-packages/plumbum/fs'...
Listing './lib/python3.5/site-packages/plumbum/machines'...
Listing './lib/python3.5/site-packages/plumbum/path'...
Listing './lib/python3.5/site-packages/plumbum-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/rpyc'...
Listing './lib/python3.5/site-packages/rpyc/core'...
Listing './lib/python3.5/site-packages/rpyc/experimental'...
Listing './lib/python3.5/site-packages/rpyc/lib'...
Listing './lib/python3.5/site-packages/rpyc/utils'...
Listing './lib/python3.5/site-packages/rpyc-3.4.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/server_test.py'...
***   File "./lib/python3.5/site-packages/tests/server_test.py", line 11
    print self.workdir
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/window'...
Compiling './lib/python3.5/site-packages/window/MiniFrame1.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (MiniFrame1.py, line 61)
Compiling './lib/python3.5/site-packages/window/SelectTemplate_Window.py'...
***   File "./lib/python3.5/site-packages/window/SelectTemplate_Window.py", line 160
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/window/change_het_window.py'...
***   File "./lib/python3.5/site-packages/window/change_het_window.py", line 112
    print old_heteroatom + "(" + heteroatom + ")" + "->" + new_heteroatom
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/window/loop_window.py'...
***   File "./lib/python3.5/site-packages/window/loop_window.py", line 72
    print "error at start"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/window/main_window.py'...
***   File "./lib/python3.5/site-packages/window/main_window.py", line 571
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/window/main_window_mini.py'...
***   File "./lib/python3.5/site-packages/window/main_window_mini.py", line 418
    print selectAutoModelMode
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/window/sequence_window.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sequence_window.py, line 61)
Listing './lib/python3.5/site-packages/wintools'...
Listing './share'...
Listing './share/python-wheels'...
